css/theme.css
body {

    font-family: Menlo, "Courier New", monospace;
    font-size : 12pt;

    margin: auto;
    max-width: 1080px;
    display: block;
    padding: 20px;

    color: #d4d4d4;
    background-color: #1e1e1e;

}

p {

    word-wrap: normal;

}

h1, h2, h3, h4, h5 {

    font-weight: bolder;
    /*color: #C586C0;*/
    color: #DCDCAA;
    margin: 10px 0px 0px 0px;
    padding: 10px 0px 00px 0px;
}

div {
    display:  block;
}

.comment {

	font-family: Menlo, "Courier New", monospace;
	color: #6A9955;

}

#template {

	overflow: auto;

}

.contact {

    float: left;
	margin: 0px 0px 0px 0px;
	padding: 10px 0px 20px 0px;

}

.position, .class {

    float: left;
	margin: 0px 00px 0px 0px;
	padding: 10px 0px 00px 50px;

}

.menu {

    clear: both;

}

a {

	color: #569CD6;

}

a:hover {

	color: #CE9178;

}

hr {
        
}

.schedule { 
    padding-top; 0px;
    padding-bottom : 0px;
    margin-bottom: 0px;
    margin-left: 0px;
}

.schedule p {
   padding-top: 0px;
   margin-top: 0px;
   margin-bottom: 0px;
}

.schedule span { 
    display : inline-block;
    vertical-align: top;
    padding-top: 4px;
    padding-bottom : 1px;
    margin-bottom: 0px;
}

.class_number {

    width: 14ch;

}

.title {

    width: 42ch;

}

.days {

    width: 6ch;

}

.time {

    text-align: right;
    width: 14ch;

}

.location {

    width: 14ch;

}

